--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin-left: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+.app {
+  margin: 2rem;
+}
+
 .nextButton {
   margin-left: 2rem;
 }
@@ -21,7 +25,8 @@ code {
 }
 
 .highlight {
-  background-color: lightgray;
+  background-color: gray;
+  color: white;
 }
 
 .inline {
